# OmegaBot2

./: .gitignore  .gitmodules  README.md  bind.bat  deploy-debug.bat  deploy.bat  run.bat
OmegaBotDll/: Cargo.toml  bind.bat  build-debug.bat  build.bat  test.bat
OmegaBotDll/cocos2d/: Cargo.toml
OmegaBotDll/cocos2d/src/: ccapplication.rs  lib.rs  utils.rs
OmegaBotDll/gd/: Cargo.toml
OmegaBotDll/gd/src/: game_manager.rs  lib.rs  play_layer.rs  utils.rs
OmegaBotDll/macros/src/: lib.rs
OmegaBotDll/replay/: .gitignore  Cargo.toml  bind.bat  c_api.toml  cbindgen.toml
OmegaBotDll/replay/src/: c_api.rs  full_replay.rs  lib.rs  replay.rs  standard_replay.rs
OmegaBotDll/src/: full_replay.rs  hack.rs  hack_handler.rs  hooks.rs  lib.rs  mutex_count.rs  omegabot.rs  patch.rs  pipe.rs  practice_fix.rs  replay.rs  replay_handler.rs  spam_bot.rs  standard_replay.rs  utils.rs
OmegaBotDll/src/cocos2d/: mod.rs  shared_director.rs
OmegaBotDll/src/gd/: game_object.rs  level_settings.rs  mod.rs  play_layer.rs  player_object.rs
OmegaBotUI/: .gitignore  OmegaBotUI.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memoryhandler.cpp  memoryhandler.h  pipe.cpp  pipe.h  resources.qrc  resources.rc  runguard.cpp  runguard.h  titlebar.cpp  titlebar.h  version.h
